# alignalt

./: .gitignore  ChangeLog  README.md  configure  configure.ac
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
src/: Makefile.am  Makefile.in  a2q.cpp  alignalt.cpp  alignmentDifferences.cpp  analyse.cpp  faextract.cpp  fastatoupper.cpp  pileup.cpp  pileupfasta.cpp  pileupfastacombine.cpp  pileupfastaconsensus.cpp  realign.cpp
