#
bin_PROGRAMS = alignalt alignmentDifferences

alignalt_SOURCES = alignalt.cpp
alignalt_LDADD = ${AM_LDADD}
alignalt_LDFLAGS = ${AM_LDFLAGS}
alignalt_CPPFLAGS = ${AM_CPPFLAGS}

alignmentDifferences_SOURCES = alignmentDifferences.cpp
alignmentDifferences_LDADD = ${AM_LDADD}
alignmentDifferences_LDFLAGS = ${AM_LDFLAGS}
alignmentDifferences_CPPFLAGS = ${AM_CPPFLAGS}
