#
bin_PROGRAMS = alignalt alignmentDifferences faextract a2q

alignalt_SOURCES = alignalt.cpp
alignalt_LDADD = ${AM_LDADD}
alignalt_LDFLAGS = ${AM_LDFLAGS}
alignalt_CPPFLAGS = ${AM_CPPFLAGS}

alignmentDifferences_SOURCES = alignmentDifferences.cpp
alignmentDifferences_LDADD = ${AM_LDADD}
alignmentDifferences_LDFLAGS = ${AM_LDFLAGS}
alignmentDifferences_CPPFLAGS = ${AM_CPPFLAGS}

faextract_SOURCES = faextract.cpp
faextract_LDADD = ${AM_LDADD}
faextract_LDFLAGS = ${AM_LDFLAGS}
faextract_CPPFLAGS = ${AM_CPPFLAGS}

a2q_SOURCES = a2q.cpp
a2q_LDADD = ${AM_LDADD}
a2q_LDFLAGS = ${AM_LDFLAGS}
a2q_CPPFLAGS = ${AM_CPPFLAGS}
