#
bin_PROGRAMS = alignalt alignmentDifferences faextract a2q analyse realign fastatoupper pileup pileupfasta pileupfastaconsensus pileupfastacombine

alignalt_SOURCES = alignalt.cpp
alignalt_LDADD = ${AM_LDADD}
alignalt_LDFLAGS = ${AM_LDFLAGS}
alignalt_CPPFLAGS = ${AM_CPPFLAGS}

alignmentDifferences_SOURCES = alignmentDifferences.cpp
alignmentDifferences_LDADD = ${AM_LDADD}
alignmentDifferences_LDFLAGS = ${AM_LDFLAGS}
alignmentDifferences_CPPFLAGS = ${AM_CPPFLAGS}

faextract_SOURCES = faextract.cpp
faextract_LDADD = ${AM_LDADD}
faextract_LDFLAGS = ${AM_LDFLAGS}
faextract_CPPFLAGS = ${AM_CPPFLAGS}

a2q_SOURCES = a2q.cpp
a2q_LDADD = ${AM_LDADD}
a2q_LDFLAGS = ${AM_LDFLAGS}
a2q_CPPFLAGS = ${AM_CPPFLAGS}

analyse_SOURCES = analyse.cpp
analyse_LDADD = ${AM_LDADD}
analyse_LDFLAGS = ${AM_LDFLAGS}
analyse_CPPFLAGS = ${AM_CPPFLAGS}

realign_SOURCES = realign.cpp
realign_LDADD = ${AM_LDADD}
realign_LDFLAGS = ${AM_LDFLAGS}
realign_CPPFLAGS = ${AM_CPPFLAGS}

fastatoupper_SOURCES = fastatoupper.cpp
fastatoupper_LDADD = ${AM_LDADD}
fastatoupper_LDFLAGS = ${AM_LDFLAGS}
fastatoupper_CPPFLAGS = ${AM_CPPFLAGS}

pileup_SOURCES = pileup.cpp
pileup_LDADD = ${AM_LDADD}
pileup_LDFLAGS = ${AM_LDFLAGS}
pileup_CPPFLAGS = ${AM_CPPFLAGS}

pileupfasta_SOURCES = pileupfasta.cpp
pileupfasta_LDADD = ${AM_LDADD}
pileupfasta_LDFLAGS = ${AM_LDFLAGS}
pileupfasta_CPPFLAGS = ${AM_CPPFLAGS}

pileupfastaconsensus_SOURCES = pileupfastaconsensus.cpp
pileupfastaconsensus_LDADD = ${AM_LDADD}
pileupfastaconsensus_LDFLAGS = ${AM_LDFLAGS}
pileupfastaconsensus_CPPFLAGS = ${AM_CPPFLAGS}

pileupfastacombine_SOURCES = pileupfastacombine.cpp
pileupfastacombine_LDADD = ${AM_LDADD}
pileupfastacombine_LDFLAGS = ${AM_LDFLAGS}
pileupfastacombine_CPPFLAGS = ${AM_CPPFLAGS}
